fixing formatting on safari for mac and secondary scroll

--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-body, html
-{
+html{
   height: 100%;
+}
+body
+{
+  width:100vw;
   margin: 0;
   padding: 0;
-
-}
-body{
   position: relative;
-  width:100%; /* Ensures that the body won't have horizontal scroll */
 }
+
 .wrapper
 {
-  overflow-x: hidden;/*This is to stop AOS dissappearing */
+    overflow-x: hidden !important;/*This is to stop AOS dissappearing */
 }
 
 nav .navbar-nav li a{
@@ -24,6 +24,7 @@ nav .navbar-nav li a{
   display: grid;
   grid-template-columns: 1fr minmax(500px, 900px) 1fr;
   grid-template-rows: repeat(4, auto);
+  /*grid-template-rows: 800px 550px 1680px 270px;*/
   grid-template-areas:
   "hd hd hd"
   ". cd ."
@@ -31,6 +32,7 @@ nav .navbar-nav li a{
   "ft ft ft";
   background-color: #81c2c9;
   justify-items: center;
+  overflow: hidden;
 }
 .mainContainer2
 {
@@ -43,6 +45,7 @@ nav .navbar-nav li a{
   "ft ft ft";
   background-color: #81c2c9;
   justify-items: center;
+  overflow: hidden;
 }
 
 .cdContent
@@ -187,14 +190,6 @@ nav .navbar-nav li a{
   color: #416165;
 }
 
-/*.headerFlag:before
-{
-  content:"";
-  background: #506075;
-  width: 100%;
-  opacity: 0.6;
-}*/
-
 .mainContHeading{
   grid-area: left1 right1;
 
@@ -208,6 +203,7 @@ nav .navbar-nav li a{
   color: #ececec;
   padding:10px;
   align-self: start;
+  overflow: hidden;
 }
 .textContent2
 {
@@ -244,6 +240,7 @@ nav .navbar-nav li a{
   width: 280px;
   margin-top:20px;
   justify-self: center;
+  overflow: hidden;
 }
 .mainContent2 h2
 {
@@ -853,7 +850,7 @@ body.offcanvas-active{
     grid-template-rows:80vh 25vh 40vh 25vh 40vh 25vh 40vh 25vh;
   }
   .headerFlag{
-    grid-template-rows: 30vh 17vh;
+    grid-template-rows: 30vh 21vh;
   }
   .headerFlag img{
     margin-top: 30px;
@@ -934,7 +931,7 @@ body.offcanvas-active{
       display: grid;
       grid-area: main;
       grid-template-columns: 350px 350px;
-      grid-template-rows: 50vh 15vh 40vh 40vh 40vh;
+      grid-template-rows: 65vh 15vh 40vh 40vh 40vh;
       grid-gap: 1em;
       grid-template-areas:
       "left0 right0"
@@ -945,7 +942,7 @@ body.offcanvas-active{
       padding-bottom:40px;
     }
   }
-  @media only screen and (max-width:900px) and (max-height:415px){
+  @media only screen and (max-width:900px) and (max-height:414px){
     .headerFlag{
       grid-template-rows: 70vh 39vh;
     }
